# qualifying_2023

./: .gitignore  CMakeLists.txt  LICENSE  README.md  diag.py  main.cpp  reference_spectrum.txt  scores.xlsx  solution.h  test.sh  zip.sh
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
ec2023/: ec2023.h  ec_float.h  ec_math.h  ec_measurement.h  ec_signal_reader.h  ec_stream_hw.h  ec_vec_hw.h
test/: 1.txt  2.txt  br.py  input.txt  parse.py  t.py  test - Copy.ipynb  test.ipynb
